# tbot

./: .env.example  .gitignore  Dockerfile  LICENSE  MODULARITY_IMPROVEMENT_PLAN.md  MODULARITY_PLAN.md  README.md  pyproject.toml  requirements.txt
tbot/: __init__.py  bot.py  config.py  const.py  context.py  llm_client.py  logic.py  main.py  memory.py  telegram_types.py
tests/: conftest.py  test_bot.py  test_bot_utils.py  test_config.py  test_context.py  test_logic.py  test_main.py  test_memory.py  test_optin.py  test_reactions.py  test_telegram_types.py  utils.py
