[project]
name = "tbot"
version = "0.1.0"
description = "LLM-driven Telegram persona bot"
authors = [{name = "Anton Stuk <sigman@ioupg.com>"}]
requires-python = ">=3.11"
dependencies = [
    "python-telegram-bot[async]>=20.6",
    "openai>=1.12.0",
    "click>=8.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88 # Example: Set a desired line length
target-version = "py310" # Example: Target Python version
select = ["E", "F", "I"] # Enable error, flake8, and import sorting rules
ignore = ["E501"] # Example: Ignore line-too-long warnings
extend-select = ["I"] # Enable import sorting
